<resources>
    <string name="app_name">Inventory-mvc</string>

    <!-- Strings related to login -->
    <string name="prompt_email">UserID</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">LogIn</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This UserID is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="no_stationery_found">There is not result found.</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_stationery">search...</string>
    <string name="filter_stationery">Filter by category</string>

    <string name="category_1_clip">Clip</string>
    <string name="category_2_envelope">Envelope</string>
    <string name="category_3_eraser">Eraser</string>
    <string name="category_4_exercise">Exercise</string>
    <string name="category_5_file">File</string>
    <string name="category_6_pad">Pad</string>
    <string name="category_7_paper">Paper</string>
    <string name="category_8_pen">Pen</string>
    <string name="category_9_puncher">Puncher</string>
    <string name="category_10_ruler">Ruler</string>
    <string name="category_11_scissors">Scissors</string>
    <string name="category_12_sharpener">Sharpener</string>
    <string name="category_13_shorthand">Shorthand</string>
    <string name="category_14_stapler">Stapler</string>
    <string name="category_15_tacks">Tacks</string>
    <string name="category_16_tape">Tape</string>
    <string name="category_17_tparency">Tparency</string>
    <string name="category_18_tray">Tray</string>
    <string name="category">Category</string>
    <string name="description">Description</string>
    <string name="UOM">UOM</string>
    <string name="add_request">Add Request</string>
    <string name="add">Add To Form</string>
    <string name="menu">Menu</string>
    <string name="show_requisition_form">Show Requisition Form</string>
    <string name="submit_requisition">Submit Requisition</string>
    <string name="filter_by_category">Category</string>
    <string name="input_request_qty">input request quantity</string>
    <string name="clear_all">Clear All</string>
    <string name="stationery_list">Stationery list</string>


    <string name="stationeryRetrieval">Stationery Retrieval</string>

    <string name="logout">Log Out</string>
    <string name="back_to_catalogue">Go To Catalogue</string>
    <string name="go_to_form">Go To Requisition Form</string>
    <string name="remove">Remove Item</string>
    <string name="no_request_item">Your requistion form is empty.</string>
    <string name="success_submit_requisition">Requsition form was submitted.</string>
    <string name="success_clear_requisition">Requsition form was cleared.</string>
    <string name="error_clear_requisition">Error occured when clearing the form.</string>
    <string name="must_be_greater_than_1">Quantity must be greater than or equal to 1.</string>
    <string name="error_pls_try_again">Opps...Some error occur. Pleas try again.</string>
    <string name="error_invalid_request_quantity">Please enter the request quantity.</string>
    <string name="error_adding_request_item">Error while adding request item</string>
    <string name="error_subtmit_new_requisition">Error while submitting new requisition</string>
    <string name="success_add_item_message">%1$d x %2$s was added into requisition form.</string>

    <string name="requesition_id">Requesition ID</string>
    <string name="requester_name">Requester Name</string>
    <string name="requestt_date">Request Date</string>


    <string name="prompt_oldPassword">Old Password</string>
    <string name="prompt_newPassword">New Password</string>
    <string name="prompt_confrimPassword">Confirm Password</string>
    <string name="action_confirm">Confrim</string>

    <!-- Department Head,Manager,Acting Department Head-->
    <string name="manageRequest">Manage Request</string>
    <string name="changeCollectionPoint">Change Collection Point</string>
    <string name="viewCollectionPoint">View Collection Point</string>
    <string name="viewPendingItem">View Pending Item</string>
    <string name="log_out">Log Out</string>

    <!--Store Clerk-->
    <string name="viewRequisition">View Requisition</string>
    <string name="submit_new_requistion">Submit New Requisition</string>
    <string name="disbursementList">Disbursement List</string>
    <string name="retrievalList">Retrieval List</string>
    <string name="allocationList">Allocation List</string>
    <string name="viewCollectionItem">View Collection Item</string>
    <string name="viewPendingItemSC">View Pending Item</string>
    <string name="log_outSC">Log Out</string>


    <!--Store Supervisor-->
    <string name="viewRequisitionRecord">View Requisition</string>
    <string name="submitNewRequistion">Submit New Requisition</string>
    <string name="disbursementDept">Disbursement List</string>
    <string name="log_outSS">Log Out</string>

    <!--User Representative-->
    <string name="viewRequisitionRecordUR">View Requisition</string>
    <string name="submitNewRequistionUR">Submit New Requisition</string>
    <string name="changeCollectionPointUR">Change Collection Point</string>
    <string name="viewCollectionItemUR">View Collection Item</string>
    <string name="viewPendingItemUR">View Pending Item</string>
    <string name="log_outUR">Log Out</string>

    <!-- Employee-->
    <string name="viewRequisitionRecordE">View Requisition Record</string>
    <string name="submitNewRequistionE">Submit New Requisition</string>
    <string name="log_outE">Log Out</string>

    <string name="retrieveReadyCollection">Retrieve ready for Collection</string>
    <!-- <string name="changeCollectionPoint">Change Collection Point</string>-->
    <string name="log_out1">Log Out</string>

    <string name="submittedRequisition">Retrieve list of submitted </string>
    <string name="modifySubmittedRequisition">Modify Submitted Requisition</string>
    <string name="viewStatusSubmittedRequisition">View Status of submitted Requistion</string>
    <string name="raiseStationeryRequistion">Raise Stationery Requistion</string>
    <string name="log_out2">Log Out</string>

    <string name="error_update_new_cp">Error while updating new collection point</string>
    <string name="success_change_cp">Collection Point Updated.</string>

    <string name="pending_requestedQty_change">Requested Qty is successfully changed.</string>
    <string name="remove_pending_requisition">Pending Requisition is successfully removed.</string>

    <string name="agreement">I agree the terms and conditions.</string>
    <string name="clear_pad">Clear Pad</string>
    <string name="save_signature">Save Signature</string>

    <string name="request_approved">Request is approved.</string>
    <string name="request_rejected">Request is rejected.</string>
    <string name="no_new_request">There is no pending request.</string>
</resources>
