<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search_stationery"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_settings"
        app:showAsAction="always"
        android:icon="@drawable/ic_action_filter"
        android:orderInCategory="100"
        android:title="@string/filter_stationery">

        <menu>
            <item
                android:id="@+id/category_1_clip"
                android:title="@string/category_1_clip" />
        </menu>

    </item>
</menu>